2003-03-27	Joel Sherrill <joel@OARcorp.com>

	* kern/kern_sysctl.c: Converted from BSP strlcpy() to strncpy().

2003-03-25	Joel Sherrill <joel@OARcorp.com>

	* rtems/rtems_bsdnet_malloc_starvation.c: Fixed name of include file.

2002-03-25	Eric Norum <norume@aps.anl.gov>


	PR 374/networking
	* Makefile.am, rtems/rtems_bsdnet.h, rtems/rtems_glue.c:
	The patch sent as part of PR270 got applied to the wrong place.  
	The effect was that (1) startup was no faster than before and
	(2) malloc starvation messages came way too quickly.  The attached
	patch fixes both these problems and also provides a mechanism for
	applications to handle malloc starvation conditions as they see fit.
	* rtems/rtems_bsdnet_malloc_starvation.c: New file.

2003-03-18	Till Straumann <strauman@slac.stanford.edu>

	PR 356/bsps
	* sys/linker_set.h: This patch makes RTEMS/PowerPC eabi compliant.
	Declare all linker-script defined addresses as
	variables of unknown size and not as short objects
	like 'int', 'void*' etc.  Since only addresses are used and never those
	variable's values, the type used in a declaration is not important.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* netinet/in_chksum.c: Remove duplicate case to include
	in_chksum_arm.c.

2003-02-20	Till Straumann <strauman@slac.stanford.edu>

	PR 351/networking
	* nfs/bootp_subr.c: Fix ridiculous leak in bootp and use
	strdup_bootp_realloc() everywhere for sake of consistency.

2003-02-11	Mike Siers <mikes@poliac.com>

	* rtems/rtems_glue.c: A small patch to the network daemon task
	code.  I just added code to check the return value of
	the rtems_bsdnet_event_receive function.  Only when
	this function returns a SUCCESSFUL status, will the
	event flags be checked.  This is more of a code cleanup issue
	than a bug.  The patch will just ensure the ipintr() and
	arpintr() functions are only called when a event is signaled.
